# Mimic-signal

./: .gitignore  NEXT_STEPS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_monitoring.ipynb  02_weak_signals.ipynb  03_auto_simulate_on_signal.ipynb  04_signal_history_analysis.ipynb
mimic_signal/: __init__.py  deduplicator.py  monitor.py  relevance.py  scorer.py  signal.py
mimic_signal/sources/: __init__.py  ais.py  base.py  fred.py  gdelt.py  newsapi.py  options.py  sec_8k.py  twitter.py
mimic_signal/weak_signals/: __init__.py  detector.py  library.py  patterns.py
tests/: conftest.py  test_deduplicator.py  test_fred.py  test_gdelt.py  test_monitor.py  test_scorer.py  test_sec_8k.py  test_signal.py  test_weak_signals.py
