[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimic-signal"
version = "0.1.0"
description = "Real-time event detection for the Mimic ecosystem"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["finance", "signal-detection", "events", "risk", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.26",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
nlp = [
    "transformers>=4.40",
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["mimic_signal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
